@@ -12,4 +12,12 @@ dokkatoo {
 
 dependencies {
     implementation(libs.caffeine)
+
+    testImplementation(libs.kotest.property)
+    testImplementation(libs.mockk)
+}
+
+tasks.test {
+    // FIXME https://github.com/gradle/gradle/issues/18647
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
